--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ body {
     height: 65px;
     width: 3px;
     transform-origin: bottom center;
+    transition: var(--transition);
 }
 .needle.hour {
     transform: translate(-50%, -100%) rotate(315deg);
@@ -130,8 +131,8 @@ body {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
